<resources>
    <string name="app_name">Diabetes Tracker</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_sort">Sort</string>
    <string name="menu_item_dark_mode">Dark mode</string>
    <string name="slogan">Control your blood sugar level</string>
    <string name="tab_reminder_name">Nhắc nhở</string>
    <string name="tab_report_name">Báo cáo</string>
    <string name="tab_chart_name">Biểu đồ</string>
    <string name="tab_home_name">Home</string>
    <string name="tab_eating">Ăn uống</string>
    <string name="tab_gymnastic">Tập thể dục</string>

    <string name="create_new_record_menu_item">Thêm bản ghi mới</string>
    <string name="search_GI_menu_item">Tra cứu chỉ số GI trong thực phẩm</string>
    <string name="more_activity_item">More activity</string>
    <string name="eating_advice">Chế độ ăn uống</string>
    <string name="settings_menu_item">Cài đặt</string>
    <string name="exit_menu_item">Thoát</string>
    <string name="sort_dialog_title">Sắp xếp</string>
    <string name="date">Ngày</string>
    <string name="blood_sugar_level">Chỉ số đường huyết</string>
    <string name="sort_type">Loại sắp xếp</string>
    <string name="descending">Giảm dần</string>
    <string name="ascending">Tăng dần</string>
    <string name="btn_save_name">save</string>
    <string name="fitler_dialog_title">Lọc bản ghi</string>
    <string name="tag_hint">Tag</string>
    <string name="time_hint">Thời gian</string>
    <string name="no_reminder">Chưa có nhắc nhở nào.\nVui lòng nhấn nút (+) để tạo nhắc nhở mới</string>
    <string name="no_record">Chưa có bản ghi nào.\nVui lòng nhấn nút (+) để tạo bản ghi mới</string>
    <string name="menu_item_select_all">Select all</string>
    <string name="menu_item_done">Save</string>
    <string name="add_reminder_activity_title">Tạo nhắc nhở</string>
    <string name="time_remind_hint">Thời gian</string>
    <string name="date_remind_hint">Ngày</string>
    <string name="repeat_checkbox_text">Lặp lại</string>
    <string name="btn_monday_name">T2</string>
    <string name="btn_tuesday_name">T3</string>
    <string name="btn_wednesday_name">T4</string>
    <string name="btn_thursday_name">T5</string>
    <string name="btn_friday_name">T6</string>
    <string name="btn_saturday_name">T7</string>
    <string name="btn_sunday_name">CN</string>
    <string name="glycemic_index">Chỉ số đường huyết</string>
    <string name="note">Ghi chú</string>
    <string name="add_new_record_title">Tạo bản ghi mới</string>
    <string name="edit_record_activity_title">Sửa bản ghi</string>
    <string name="menu_item_delete_title">Delete</string>
    <string name="delete">Delete</string>
    <string name="reminder_type">Loại nhắc nhở</string>
    <string name="edit_reminder_fragment_title">Sửa nhắc nhở</string>

    <string name="glycemic_error">Vui lòng nhập chỉ số đường huyết</string>
    <string name="date_error">Vui lòng chọn ngày</string>
    <string name="time_error">Vui lòng chọn giờ</string>
    <string name="tag_error">Vui lòng chọn tag</string>
    <string name="advice_image_content_description">Advice avatar</string>
    <string name="advice_num">Lời khuyên %1$d</string>
    <string name="activity_advice_title">Lời khuyên</string>
    <string name="activity_advice_description">\u3000\u3000 %1$s</string>
    <string name="page_num">%1$d/%2$d</string>
    <string name="gymnastic_advice">Thể dục thể thao</string>
    <string name="percent">%1$.0f%%</string>
    <string name="low_title">Low</string>
    <string name="normal_title">Normal</string>
    <string name="high_title">High</string>
    <string name="min_mmol">Min: %1$.2f</string>
    <string name="min_mg">Min: %1$d</string>
    <string name="average_mmol">Average: %1$.2f</string>
    <string name="average_mg">Average: %1$d</string>
    <string name="max_mmol">Max: %1$.2f</string>
    <string name="max_mg">Max: %1$d</string>
    <string name="hba1c">Hba1c: %1$.2f%%</string>
    <string name="btn_select_period_name">Select period</string>
    <string name="select_period_dialog_title">Chọn khoảng thời gian</string>
    <string name="unknown">\?</string>
    <string name="fragment_settings_title">Cài đặt</string>
    <string name="search_food_gi_title">Tra cứu chỉ số GI thực phẩm</string>
    <string name="name_food">Tên Thực Phẩm</string>
    <string name="search">Search</string>
    <string name="type_food">Loại Thực Phẩm</string>
    <string name="GI">GI</string>
    <string name="advice">Lời khuyên</string>
    <!--Lời khuyên GI thực phẩm-->
    <string name="safe_GI_advice">Đây là loại thực phẩm có lượng carbohydrate thấp nên không làm tăng lượng đường trong máu
    có thể sử dụng nhiều</string>
    <string name="normal_GI_advice">Đây là loại thực phẩm có lượng carbohydrate trung bình có thể làm tăng nhanh đường huyết
    trong máu, khuyến cáo nên sử dụng ở mức vừa phải</string>
    <string name="high_GI_advice">Đây là loại thực phẩm có khả năng làm tăng nhanh lượng đường huyết trong máu dẫn đến
    rối loạn điều tiết insulin, khuyến cáo không nên sử dụng nhiều</string>

<!--    Warning-->
    <string name="warning_delete_data">Thao tác này sẽ xóa toàn bộ dữ liệu về đường huyết của bạn. Bạn có chắc chắn muốn xóa?</string>
</resources>
