<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_content">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/time_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time_remind_hint"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_clock"
        app:endIconContentDescription="@string/time_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time_remind_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/date_remind_hint"-->
<!--        android:layout_marginTop="@dimen/content_margin_top"-->
<!--        app:endIconMode="custom"-->
<!--        app:endIconDrawable="@drawable/ic_calendar"-->
<!--        app:endIconContentDescription="@string/time_hint">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/date_remind_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag_hint"
        android:layout_marginTop="@dimen/content_margin_top">

       <AutoCompleteTextView
           android:id="@+id/tag_autocompletetext"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:dropDownHeight="200dp"
           android:textColor="@color/colorSecondary"
           android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/repeat_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeat_checkbox_text"
        android:layout_marginTop="@dimen/content_margin_top" />

    <LinearLayout
        android:id="@+id/btn_days_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin_top"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            style="@style/AppTheme.CheckableButton"
            android:id="@+id/btn_monday"
            android:layout_width="@dimen/button_day_width"
            android:layout_height="@dimen/button_day_height"
            android:tag="@string/btn_monday_name"
            android:text="@string/btn_monday_name"/>

        <com.google.android.material.button.MaterialButton
            style="@style/AppTheme.CheckableButton"
            android:id="@+id/btn_tuesday"
            android:layout_width="@dimen/button_day_width"
            android:layout_height="@dimen/button_day_height"
            android:tag="@string/btn_tuesday_name"
            android:text="@string/btn_tuesday_name"/>

        <com.google.android.material.button.MaterialButton
            style="@style/AppTheme.CheckableButton"
            android:id="@+id/btn_wednesday"
            android:layout_width="@dimen/button_day_width"
            android:layout_height="@dimen/button_day_height"
            android:tag="@string/btn_wednesday_name"
            android:text="@string/btn_wednesday_name"/>

        <com.google.android.material.button.MaterialButton
            style="@style/AppTheme.CheckableButton"
            android:id="@+id/btn_thursday"
            android:layout_width="@dimen/button_day_width"
            android:layout_height="@dimen/button_day_height"
            android:tag="@string/btn_thursday_name"
            android:text="@string/btn_thursday_name"/>

        <com.google.android.material.button.MaterialButton
            style="@style/AppTheme.CheckableButton"
            android:id="@+id/btn_friday"
            android:layout_width="@dimen/button_day_width"
            android:layout_height="@dimen/button_day_height"
            android:tag="@string/btn_friday_name"
            android:text="@string/btn_friday_name"/>

        <com.google.android.material.button.MaterialButton
            style="@style/AppTheme.CheckableButton"
            android:id="@+id/btn_saturday"
            android:layout_width="@dimen/button_day_width"
            android:layout_height="@dimen/button_day_height"
            android:tag="@string/btn_saturday_name"
            android:text="@string/btn_saturday_name"/>

        <com.google.android.material.button.MaterialButton
            style="@style/AppTheme.CheckableButton"
            android:id="@+id/btn_sunday"
            android:layout_width="@dimen/button_day_width"
            android:layout_height="@dimen/button_day_height"
            android:tag="@string/btn_sunday_name"
            android:text="@string/btn_sunday_name"/>
    </LinearLayout>


</LinearLayout>