<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_dialog_title"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/colorTextPrimary"
            style="@style/Widget.MaterialComponents.FloatingActionButton"/>
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radio_sort_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_margin_start_end"
        android:layout_marginLeft="@dimen/dialog_margin_start_end">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:checked="true"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_blood_sugar_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blood_sugar_level"/>
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/sort_type"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <RadioGroup
        android:id="@+id/radio_sort_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_margin_start_end"
        android:layout_marginLeft="@dimen/dialog_margin_start_end">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_descending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descending"
            android:checked="true"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_ascending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ascending"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_save_name"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
</LinearLayout>