<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/glycemic_index_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/glycemic_index"
        app:startIconDrawable="@drawable/ic_drop"
        app:startIconTint="@color/colorHigh"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/glycemic_index_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/colorText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:layout_marginTop="@dimen/content_margin_top"
        app:errorEnabled="true"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconMode="custom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/record_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/colorText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time_hint"
        android:layout_marginTop="@dimen/content_margin_top"
        app:errorEnabled="true"
        app:endIconDrawable="@drawable/ic_clock"
        app:endIconMode="custom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time_record_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/tag_autocomplete_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag_hint"
        android:layout_marginTop="@dimen/content_margin_top"
        app:errorEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/tag_autocompletetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="200dp"
            android:textColor="@color/colorSecondary"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin_top"
        android:hint="@string/note"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:lines="5"
            android:maxLines="20"
            android:textColor="@color/colorText"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>