<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_content">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin_top"
        android:hint="@string/name_food"
        app:startIconDrawable="@drawable/ic_food">

        <AutoCompleteTextView
            android:id="@+id/name_food_autocompletetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="200dp"
            android:inputType="none"
            android:textColor="@color/colorSecondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/name_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_food_layout_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_food"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_food_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:textColor="@color/colorText" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/type_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type_food_layout_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/type_food"
            android:textColor="@color/colorText"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type_food_textview"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorText" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/GI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/GI_layout_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/GI"
            android:textColor="@color/colorText"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/GI_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="150dp"
            android:textStyle="bold"
            android:textColor="@color/colorHigh"/>
    </RelativeLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/advice_layout_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/advice"
        android:textColor="@color/colorText"
        android:textStyle="bold"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/advice_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textColor="@color/colorHigh"/>
</LinearLayout>